--- a/index.html
+++ b/index.html
@@ -4,37 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pat 🦝🐕</title>
-    <link rel="icon" type="image/x-icon" href="./content/avatar.png">
+    <link rel="icon" type="image/x-icon" href="./content/avatar.png" />
   </head>
   <body>
-    <nav style="border: double; padding: 2.5px; margin: 10px;">
-      <a href="./">Pat</a>
+    <nav>
+      <a href="./">Pats website</a>
     </nav>
 
     <div class="spacer"></div>
 
-    <div class="hstack" style="margin-left: 10px; margin-right: 10px">
-      <div
-        class="card"
-        id="profileCard"
-        style="border: dashed; padding: 10px; text-align: left; flex: 0 0 25%"
-      >
-        <img
-          src="./content/avatar.png"
-          width="100px"
-          height="100px"
-          style="border: dotted; border-radius: 50%"
-        />
+    <div class="hstack">
+      <div class="card" id="profileCard">
+        <img src="./content/avatar.png" width="100px" height="100px" />
         <h1>Pat</h1>
 
-        <p>dude</p>
+        <p>lazy dude</p>
 
         <p>lvl <span id="age"></span></p>
       </div>
 
       <div class="spacer"></div>
 
-      <div class="other" style="border: outset 2.5px; padding: 10px; flex: 1;">
+      <div class="other">
         <p>Raccoon dog enjoyer</p>
 
         <p>Using SwiftUI for iPhone apps enjoyer</p>
@@ -48,27 +39,27 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-
     background-color: #2d3748;
     color: #f1e7d0;
   }
 
-  body a {
+  nav {
+    border: double;
+    padding: 2.5px;
+    margin: 10px;
+  }
+
+  nav a {
     color: #f1e7d0;
     text-decoration: none;
   }
 
-  body a:visited {
+  nav a:visited {
     color: #f1e7d0;
     text-decoration: none;
   }
 
-  body a:hover {
+  nav a:hover {
     color: #f1e7d0;
     text-decoration: underline;
   }
@@ -77,28 +68,47 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
-  @media (max-width: 768px) {
-  .hstack {
-    flex-direction: column !important;
-    align-items: center;
-  }
-  
   .card {
-    flex: none !important;
-    width: 90%;
-    margin-bottom: 15px;
+    border: dashed;
+    padding: 10px;
+    text-align: left;
+    flex: 0 0 25%;
   }
-}
+
+  .card img {
+    border: dotted;
+    border-radius: 50%;
+  }
+
+  .other {
+    border: outset 2.5px;
+    padding: 10px;
+    flex: 1;
+  }
 
   .spacer {
     padding: 10px;
   }
+
+  @media (max-width: 768px) {
+    /* when display to thin hstack turns into vstack logic  */
+    .hstack {
+      flex-direction: column;
+    }
+
+    .card {
+      flex: none !important;
+      width: 100%;
+    }
+  }
 </style>
 
 <script>
-    function age() {
+  function age() {
     var today = new Date();
 
     var bday = new Date(2006, 3, 7);
@@ -109,6 +119,5 @@
     return age;
   }
 
-document.getElementById("age").innerHTML = age();
-
+  document.getElementById("age").innerHTML = age();
 </script>
