--- a/index.html
+++ b/index.html
@@ -79,11 +79,6 @@
           >App for Swift Student Challenge about car spotting - Spotter</a
         >
 
-        <p>
-          PHP Project of a Shop website - might link it here if I clean up the
-          Personal details of other people from it.
-        </p>
-
         <p>Homelab for self hosting things</p>
 
         <h3>Socials:</h3>
@@ -96,8 +91,9 @@
       <div class="spacer"></div>
 
       <div class="card content">
-        <h1><i>Currently empty space</i></h1>
+        <h1><i>Currently making dumb iPhone games</i></h1>
         <p><i>Head empty</i></p>
+        <p>limiting phone usage rn too much socals</p>
       </div>
     </div>
   </body>
