--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="spacer"></div>
 
       <div class="card content">
-        <h1><i>Currently making dumb iPhone games</i></h1>
+        <h1><i>Currently making dumb iPhone apps</i></h1>
         <p><i>Head empty</i></p>
         <p>limiting phone usage rn too much socals</p>
       </div>
