--- a/index.html
+++ b/index.html
@@ -59,27 +59,13 @@
 
         <p>Network and SysAdmin things - INF02 things</p>
 
-        <h4>Employability side</h4>
-
-        <p>Pessimistic about it tbh.</p>
-
-        <h4>Some things I've made:</h4>
-
-        <a href="https://github.com/parpok/parpok.xyz2"
-          >This website and tons of its variations I have on other git repos</a
-        >
-
-        <p>
-          iPhone App that was so bad I killed it - Rimo - iykyk I feel so
-          embarrased talking about it. At least it was something I put on the
-          App Store
-        </p>
-
-        <a href="https://github.com/parpok/spotter"
-          >App for Swift Student Challenge about car spotting - Spotter</a
-        >
-
-        <p>Homelab for self hosting things</p>
+        <h3>
+          Badges:
+        </h3>
+        <img class="WebisteButton" src="./content/button.png" alt="Parpoks website button"><a href="https://parpok.xyz"></a></img>
+        <img class="WebisteButton" src="https://breakgim.me/88x31/breakgimme.gif" alt="breakgimme website button"><a href="https://breakgim.me"></a></img>
+        <img class="WebisteButton" src="https://breakgim.me/88x31/smeagol-button.gif" alt="śmigol website button"><a href="https://smeagol.neocities.org"></a></img>
+        <img class="WebisteButton" src="./content/madewith_macos.gif" alt="Made with MacOS"><a href="https://www.apple.com/os/macos/"></a></img>
 
         <h3>Socials:</h3>
         <a href="mailto://pat@parpok.xyz">Mail</a>
@@ -144,7 +130,7 @@
     flex: 0 0 30%;
   }
 
-  .profile img {
+  .profile img:not(.WebisteButton) {
     border: dotted;
     border-radius: 50%;
   }
