--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <h3>
           Badges:
         </h3>
-        <img class="WebisteButton" src="./content/button.png" alt="Parpoks website button"><a href="https://parpok.xyz"></a></img>
-        <img class="WebisteButton" src="https://breakgim.me/88x31/breakgimme.gif" alt="breakgimme website button"><a href="https://breakgim.me"></a></img>
-        <img class="WebisteButton" src="https://breakgim.me/88x31/smeagol-button.gif" alt="śmigol website button"><a href="https://smeagol.neocities.org"></a></img>
-        <img class="WebisteButton" src="./content/madewith_macos.gif" alt="Made with MacOS"><a href="https://www.apple.com/os/macos/"></a></img>
+        <a href="https://parpok.xyz"><img class="WebisteButton" src="./content/button.png" alt="Parpoks website button"></a>
+        <a href="https://breakgim.me"><img class="WebisteButton" src="https://breakgim.me/88x31/breakgimme.gif" alt="breakgimme website button"></a>
+        <a href="https://smeagol.neocities.org"><img class="WebisteButton" src="https://breakgim.me/88x31/smeagol-button.gif" alt="śmigol website button"></a>
+        <a href="https://www.apple.com/os/macos/"><img class="WebisteButton" src="./content/madewith_macos.gif" alt="Made with MacOS"></a>
 
         <h3>Socials:</h3>
         <a href="mailto://pat@parpok.xyz">Mail</a>
