--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <a href="https://breakgim.me"><img class="WebisteButton" src="https://breakgim.me/88x31/breakgimme.gif" alt="breakgimme website button"></a>
         <a href="https://smeagol.neocities.org"><img class="WebisteButton" src="https://breakgim.me/88x31/smeagol-button.gif" alt="śmigol website button"></a>
         <a href="https://www.apple.com/os/macos/"><img class="WebisteButton" src="./content/madewith_macos.gif" alt="Made with MacOS"></a>
+        <a href="https://tanu.moe"><img class="WebisteButton" src="./content/tanu88x31.png" alt="Tanu website button"></a>
 
         <h3>Socials:</h3>
         <a href="mailto://pat@parpok.xyz">Mail</a>
